--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.14.0",
 		"three": "^0.171.0"
 	},
 	"devDependencies": {
