--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.14.0",
+		"@rive-app/canvas": "^2.25.3",
 		"gsap": "^3.12.5",
 		"three": "^0.171.0"
 	},
