--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"@dimforge/rapier3d-compat": "^0.14.0",
 		"@rive-app/canvas": "^2.25.3",
 		"gsap": "^3.12.5",
-		"three": "^0.171.0"
+		"three": "^0.171.0",
+		"word-wrapper": "^1.0.7"
 	},
 	"devDependencies": {
 		"@tweakpane/core": "^2.0.5",
