--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@rive-app/canvas": "^2.25.6",
 		"gsap": "^3.12.7",
 		"three": "^0.172.0",
+		"three-msdf-text-utils": "^1.1.7",
 		"word-wrapper": "^1.0.7"
 	},
 	"devDependencies": {
